Rebase of features Splashscreen using font

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="btn_hora">Selecione a hora</string>
     <string name="btnHora">Selecione a data</string>
     <string name="btnData">Selecione a data</string>
+    <string name="title_activity_view_services">ViewServicesActivity</string>
+    <string name="title_activity_admin_controls">AdminControlsActivity</string>
 </resources>
